Add thank you component

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
     top: 5.25rem;
 }
 
-form .btn {
+.btn {
     background-color: hsl(278, 68%, 11%);
     @apply py-3 px-6 rounded shadow text-white text-base tracking-wide lg:text-lg; 
 }
